corection orthographe faults

--- a/content/experiences/001.md
+++ b/content/experiences/001.md
@@ -4,26 +4,26 @@ title: premières
 
 <div class="content" >
 
-# Mes expereinces :
+# Mes experiences :
 
 <div class="flex">
 <div >
 
 ## Agent de mise en rayons
 
-J'ai travaillé l'été en tant qu'agent de rayon a Carrefour Mi-voix a Calais
+J'ai travaillé l'été en tant qu'agent de rayon à Carrefour Mi-voix à Calais.
 
-Cette experience ma permis de develloper mon autonomie
-travaillant du matin (5h-11h), cela ma permis de me donner une certaine rigeur sur mon rythme de vie
+Cette experience ma permis de développer mon autonomie.
+Travaillant du matin (5h-11h), cela ma permis d'acquérir une certaine rigeur sur mon rythme de vie.
 
 </div>
 <div >
 
-## Artisant electricien
+## Artisant éléctricien
 
-J'ai travaillé l'été comme maneuvre avec un artisant electricien pendant 5ans
+J'ai travaillé l'été comme manoeuvre avec un artisan électricien pendant 5ans.
 
-ce travail ma permis de developper mon relationel avec les clients , étant donner que les client venais sur les chantier
+Ce travail ma permis de développer mes qualités relationelles.
 
 </div>
 
