--- a/content/experiences/002.md
+++ b/content/experiences/002.md
@@ -11,20 +11,20 @@ title: premières
 
 ## stage Architect
 
-Ce stage a eu lieu en secondes (2017)
+Ce stage à eu lieu en 3ème (2017)
 
-Ce stage ma permis de decouvrir le monde de l'architecture
-Je n'est pas continuer dans cette voix car je ne sais pas dessiner
+Ce stage ma permis de decouvrir le monde de l'architecture.
+Je n'ai pas continué dans cette voie car je ne suis pas bon dessinateur.
 
 </div>
 <div >
 
 ## stage prof de mathématiques
 
-Ce stage a eu lieu en secondes (2018)
+Ce stage à eu lieu en seconde (2018)
 
-Ce stage ma permis de prendre goûts a l'enseignements
-Je compte d'ailleur être vacataire en informatique plustard
+Il ma permis de prendre goût à l'enseignement.
+Je compte d'ailleur être vacataire en informatique plus tard.
 
 </div>
 
